--- a/index.html
+++ b/index.html
@@ -2,8 +2,14 @@
 <html>
   <head>
     <title>Practica CSS</title>
+    <link rel="stylesheet" type="text/css" href="estilos.css" />
   </head>  
     <body>
-      <h1>Probando Git</h1> 
+      <h1 id="estilo">Probando Git</h1> 
+      <h1>Sin Estilo</h1>
+      <h2>Probando 1</h2>
+      <h2 class="subtitulo otraclase">Probando 2</h2>
+      <h2 class="subtitulo">Probando 3</h2>
+      <h2 class="subtitulo">Probando 4</h2>
     </body>
 </html>
