--- a/Recuperatorio/index.html
+++ b/Recuperatorio/index.html
@@ -144,7 +144,9 @@
                             <button type="submit">Enviar</button>
                         <div class="linea">
                              <button type="reset" value="Limpiar">Limpiar</button>
-                    </div>
+                        <div class="linea">
+                            <button type="submit" value="Guardar">Guardar</button>
+                     </div>
                     </form>
                     </body>
             </html>
